--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,42 +8,43 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
         tools:context=".MainActivity">
-
-        <Spinner
-            android:id="@+id/Spinner"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="280dp"
-            android:backgroundTint="@color/purple_700"
-            android:background="@drawable/button_shape"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/button_Spinner"/>
-        <Button
-            android:id="@+id/button_Spinner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/submit"
-            android:textAllCaps="false"
-            android:spinnerMode="dropdown"
-            android:background="@drawable/button_shape"
-            app:layout_constraintTop_toTopOf="@+id/Spinner"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/Spinner"
-            app:layout_constraintLeft_toRightOf="@id/Spinner"/>
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar"
+            android:elevation="24dp"/>
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="42dp"
+            android:layout_marginTop="180dp"
             android:text=""
             android:textColor="@color/black"
             android:textSize="24sp"
-            app:layout_constraintTop_toBottomOf="@id/Spinner"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"/>
+        <Spinner
+            android:id="@+id/Spinner"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_Spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/submit"
+            android:layout_marginTop="80dp"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            android:background="@drawable/button_shape"
+            app:layout_constraintTop_toBottomOf="@+id/Spinner"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"/>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
